<resources>
    <string name="app_name">Github Login</string>
    <string name="action_settings">Settings</string>
    <string name="authorize">AUTHORIZE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="home_second">Home Second</string>
    <string name="packageName">com.mydigipay.challenge</string>
    <string name="search">Search</string>
    <string name="searchRepo">Search for  Repository</string>
    <string name="searchRepoHint">"Search repositories to jump"</string>
    <string name="stargazers">Stargazers</string>
    <string name="forks">Forks</string>
    <string name="branches">branches</string>
    <string name="commitedBy">Committed by %s</string>
    <string name="noBranchSelected">Non of branch selecetd</string>
    <string name="noCommit">No commit pushed yet</string>
    <string name="addAccount">Add Account</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="publicRepos">Public Repos</string>
    <string name="followers">Followers</string>
    <string name="dontHaveAnyRepos">You don\'t have any repos</string>
</resources>
