<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.mydigipay.challenge.ui.profile.ProfileViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:refreshing="@{vm.inProgress}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.repo.RepoFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/profileHeader_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/fragmentProfile_avatar_iv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="18dp"
                        app:imageUrl="@{vm.user.avatarUrl}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/github_logo" />

                    <TextView
                        android:id="@+id/fragmentProfile_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{vm.user.name}"
                        android:textColor="@color/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_avatar_iv"
                        tools:text="Repo Name Title" />

                    <TextView
                        android:id="@+id/fragmentProfile_login_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{`@` + vm.user.login}"
                        android:textColor="@color/greyTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_name_tv"
                        tools:text="sdarvish" />

                    <TextView
                        android:id="@+id/fragmentProfile_followingLabel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/greyTextColor"
                        app:layout_constraintEnd_toStartOf="@id/fragmentProfile_followersLabel_tv"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_followingCount_tv" />

                    <TextView
                        android:id="@+id/fragmentProfile_followersLabel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/followers"
                        android:textColor="@color/greyTextColor"
                        app:layout_constraintEnd_toStartOf="@id/fragmentProfile_publicReposLabel_tv"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/fragmentProfile_followingLabel_tv"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_followersCount_tv" />


                    <TextView
                        android:id="@+id/fragmentProfile_publicReposLabel_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/branches"
                        android:textColor="@color/greyTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/fragmentProfile_followersLabel_tv"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_publicRepos_tv" />

                    <TextView
                        android:id="@+id/fragmentProfile_followingCount_tv"
                        number="@{vm.user.following}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="@id/fragmentProfile_followingLabel_tv"
                        app:layout_constraintStart_toStartOf="@id/fragmentProfile_followingLabel_tv"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_login_tv"
                        tools:text="100k" />

                    <TextView
                        android:id="@+id/fragmentProfile_followersCount_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="@id/fragmentProfile_followersLabel_tv"
                        app:layout_constraintStart_toStartOf="@id/fragmentProfile_followersLabel_tv"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_login_tv"
                        app:number="@{vm.user.followers}"
                        tools:text="3" />

                    <TextView
                        android:id="@+id/fragmentProfile_publicRepos_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="@id/fragmentProfile_publicReposLabel_tv"
                        app:layout_constraintStart_toStartOf="@id/fragmentProfile_publicReposLabel_tv"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_login_tv"
                        app:number="@{vm.user.publicRepos}"
                        tools:text="4" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/fragmentProfile_quote_aiv"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_followingLabel_tv"
                        app:srcCompat="@drawable/ic_double_quote" />

                    <TextView
                        android:id="@+id/fragmentProfile_desc_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{vm.user.bio}"
                        android:textColor="@color/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/fragmentProfile_quote_aiv"
                        app:layout_constraintTop_toTopOf="@id/fragmentProfile_quote_aiv"
                        tools:text="Repo Description text title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.75dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/separatorLine"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fragmentProfile_desc_tv" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/fragmentProfile_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:goneUnless="@{vm.inProgress}"
                app:layout_constraintTop_toBottomOf="@id/profileHeader_cv" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragmentProfile_reposList_rv"
                data="@{vm.repos}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:goneUnless="@{vm.repos!=null &amp;&amp; vm.repos.size()>0}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileHeader_cv"
                tools:listitem="@layout/item_commit" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dontHaveAnyRepos"
                app:goneUnless="@{vm.repos==null || vm.repos.size()==0}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileHeader_cv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>


